@@ -1,0 +1,52 @@
+/*****************************************************************************
+ *  $Id$
+ *****************************************************************************
+ *  Written by Chris Dunlap <cdunlap@llnl.gov>.
+ *  Copyright (C) 2007-2010 Lawrence Livermore National Security, LLC.
+ *  Copyright (C) 2002-2007 The Regents of the University of California.
+ *  UCRL-CODE-155910.
+ *
+ *  This file is part of the MUNGE Uid 'N' Gid Emporium (MUNGE).
+ *  For details, see <http://munge.googlecode.com/>.
+ *
+ *  MUNGE is free software: you can redistribute it and/or modify it under
+ *  the terms of the GNU General Public License as published by the Free
+ *  Software Foundation, either version 3 of the License, or (at your option)
+ *  any later version.  Additionally for the MUNGE library (libmunge), you
+ *  can redistribute it and/or modify it under the terms of the GNU Lesser
+ *  General Public License as published by the Free Software Foundation,
+ *  either version 3 of the License, or (at your option) any later version.
+ *
+ *  MUNGE is distributed in the hope that it will be useful, but WITHOUT
+ *  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ *  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ *  and GNU Lesser General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  and GNU Lesser General Public License along with MUNGE.  If not, see
+ *  <http://www.gnu.org/licenses/>.
+ *****************************************************************************/
+
+
+#ifndef XGETGRENT_H
+#define XGETGRENT_H
+
+#include <grp.h>
+
+
+/*****************************************************************************
+ *  Functions
+ *****************************************************************************/
+
+int  xgetgrent_buf_create (char **buf_p, int *buflen_p);
+
+void xgetgrent_buf_destroy (char *buf);
+
+void xgetgrent_init (void);
+
+void xgetgrent_fini (void);
+
+int  xgetgrent (struct group *gr, char *buf, size_t buflen);
+
+
+#endif /* !XGETGRENT_H */
